fix: menu item align (#1390)

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -486,9 +486,9 @@ a.@{prefix}-menu__item {
     text-align: center;
     color: @menu-item-color--light;
     cursor: pointer;
-    // overflow: hidden;
     text-overflow: ellipsis;
     border-radius: @border-radius-default;
+    justify-content: space-between;
 
     ::selection {
       background: transparent;
